Tue Jul 20 13:25:09 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lib/pci.h: Types are OS dependent.

	* lib/internal.h: Byte order hacks are OS dependent.

	* lib/configure: Recognize FreeBSD. Also set OS_XXX according to the OS.

	* lib/Makefile, lib/access.c: Added fbsd-device target.

	* pci.ids: Added an entry for PLX 9080 bridges with subsystem ID
	incorrectly set to device ID.

	* README: Added a note that we support FreeBSD.

	* Makefile (PREFIX, ROOT): Set it depending on the OS.
	(%.8): Grrr, BSD date is not able to convert date formats the same way
	as GNU date does. Use sed instead.
	(install): Use `-c' when calling install.

	* lib/fbsd-device.c: Added FreeBSD /dev/pci access module contributed
	by Jari Kirma <kirma@cs.hut.fi>.

	* lib/proc.c: Rewrote the pread/pwrite things once again. Use pread
	and pwrite only when we are certain it's safe (i.e., glibc 2.1
	on all architectures or any libc on a i386 where we really know
	how to use syscalls directly). In all other cases, emulate it
	with lseek/read/write.

	* pci.ids: Some more IDs.

Mon Jul 19 14:10:36 1999  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Added IDs of parallel port controller cards as sent
	by Tim Waugh <tim@cyberelk.demon.co.uk>.

Wed Jul  7 00:55:48 1999  Martin Mares  <mj@albireo.ucw.cz>

	* lib/proc.c (proc_scan): HAVE_LONG_ADDRESS instead of HAVE_64BIT_ADDRESS.

	* lspci.c: ADDR_FORMAT now depends on both HAVE_64BIT_ADDRESS and
	HAVE_LONG_ADDRESS.

	* lib/configure: HAVE_64BIT_ADDRESS now doesn't imply that the addresses
	are represented as long long. Introduced a new flag HAVE_LONG_ADDRESS
	to indicate this. Both Sparc architectures now use both 64BIT_ADDRESS
	and LONG_ADDRESS since they have 32-bit userland, but don't set LONG_ADDRESS
	on Alpha.

	* lspci.c (show_msi): Added dumping of the MSI capability.
	(show_slotid): The same for SlotID capability.
	(show_caps): Seperated capability dumping, because it should
	be used for both htype0 and htype1. Even PCI 2.2 doesn't mention